--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.0.3"
+    "@astrojs/tailwind": "^5.1.3",
+    "@fontsource-variable/onest": "^5.1.0",
+    "@fontsource/onest": "^5.1.0",
+    "astro": "^5.0.3",
+    "tailwindcss": "^3.4.16"
   }
 }
